IBX-10842: Fix OverflowList jumps on dynamic items change

--- a/packages/assets/src/scss/inputs/_dropdown.scss
+++ b/packages/assets/src/scss/inputs/_dropdown.scss
@@ -26,6 +26,7 @@
     }
 
     &__selection-info {
+        flex-grow: 1;
         user-select: none;
     }
 
